changes in roommate apis
